<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mamallan</groupId>
    <artifactId>com.mamallan.gwtapp</artifactId>
    <packaging>war</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <gwtVersion>2.6.0</gwtVersion>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tomcat.webport>8082</tomcat.webport>
        <tomcat.ajpport>8182</tomcat.ajpport>
        <tomcat.context>/parent</tomcat.context>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<echo2.app>2.3</echo2.app>
		<echo2.webcontainer>2.3</echo2.webcontainer>
		<echo2.webrender>2.3</echo2.webrender>
		<echo2.extras.app>2.7.9</echo2.extras.app>
		<echo2.extras.webcontainer>2.7.9</echo2.extras.webcontainer>
		<echo2.filetransfer.app>1.6.1</echo2.filetransfer.app>
		<echo2.filetransfer.webcontainer>1.6.1</echo2.filetransfer.webcontainer>
		<echopointng>2.1.0rc5</echopointng>
		<echobinding>2.7</echobinding>
		<cloudconnect>1.5</cloudconnect>
		<com.google.guava>17.0</com.google.guava>
		<com.lowagie.text>5.4.0</com.lowagie.text>
		<mchange.commons.java>0.2.3.4</mchange.commons.java>
		<com.mchange.c3p0>0.9.1.2</com.mchange.c3p0>
		<com.paypal.sdk>2.10.116</com.paypal.sdk>
		<com.sun.syndication>1.0.0</com.sun.syndication>
		
		<com.rabbitmq>3.3.4</com.rabbitmq>
		<com.sun.syndication>1.0.0</com.sun.syndication>
		<commons.fileupload>1.3.1</commons.fileupload>
		<commons.io>2.4</commons.io>
		<commons.beanutils>1.7.0</commons.beanutils>
		<commons.codec>1.3.0</commons.codec>
		<commons.lang>2.4.0</commons.lang>
		<commons.logging>1.1.1</commons.logging>
		<de.odysseus.el>2.1.3</de.odysseus.el>
		<de.odysseus.juel>2.1.3</de.odysseus.juel>
		<derivo.util>2.6</derivo.util>
		<com.dweb>3.1</com.dweb>
		<eu.medsea.mimeutil>2.1.3</eu.medsea.mimeutil>
		<jalopy>2.1</jalopy>
		<javap2str>1.1</javap2str>
		<javax.el>2.2.1-b04</javax.el>
		<javax.jms>1.1.0</javax.jms>
		<javax.servlet>2.5.0</javax.servlet>
		<joda.time>2.6</joda.time>
		<com.l2fprod.shantavis>2.9</com.l2fprod.shantavis>
		<namegen>1.2</namegen>
		<cglib>3.1</cglib>
		<net.sf.ehcache>2.8.3</net.sf.ehcache>
		<net.sf.ezmorph>1.0.6</net.sf.ezmorph>
		<net.sf.json-lib>2.4-jdk15</net.sf.json-lib>
		<net.sf.opencsv>2.3</net.sf.opencsv>
		<ognl.custom>3.1</ognl.custom>
		<org.apache.ant>1.8.3</org.apache.ant>
		<org.apache.log4j>1.2.16</org.apache.log4j>
		<org.apache.poi>3.9.0.FINAL</org.apache.poi>
		<org.apache.velocity>1.5</org.apache.velocity>
		<org.apache.xalan>2.7.1</org.apache.xalan>
		<org.apache.xbean>3.18</org.apache.xbean>
		<org.eclipse.core.runtime>3.10.0-v20140318-2214</org.eclipse.core.runtime>
		<org.hibernate>4.3.7.Final</org.hibernate>
		<org.hibernate.common>4.0.5.Final</org.hibernate.common>
		<org.hibernate.javax.persistence>1.0.0.Final</org.hibernate.javax.persistence>
		<org.hibernate.ehcache>4.3.8.Final</org.hibernate.ehcache>
	
		<org.jdom>1.0.0</org.jdom>	
		<karora.orana.wizard>1.4</karora.orana.wizard>
		<org.quartz-scheduler>2.2.1</org.quartz-scheduler>

		<org.springframework.aop>4.0.6.RELEASE</org.springframework.aop>
		<org.springframework.asm>3.1.4.RELEASE</org.springframework.asm>
		<org.springframework.aspects>4.0.6.RELEASE</org.springframework.aspects>
		<org.springframework.beans>4.0.6.RELEASE</org.springframework.beans>
		<org.springframework.context>4.0.6.RELEASE</org.springframework.context>
		<org.springframework.context-support>4.0.6.RELEASE</org.springframework.context-support>
		<org.springframework.core>4.0.6.RELEASE</org.springframework.core>
		<org.springframework.expression>4.0.6.RELEASE</org.springframework.expression>
		<org.springframework.jdbc>4.0.6.RELEASE</org.springframework.jdbc>
		<org.springframework.jms>4.0.6.RELEASE</org.springframework.jms>
		<org.springframework.orm>4.0.6.RELEASE</org.springframework.orm>
		<org.springframework.oxm>4.0.6.RELEASE</org.springframework.oxm>
		<org.springframework.tx>4.0.6.RELEASE</org.springframework.tx>
		<org.springframework.web>4.0.6.RELEASE</org.springframework.web>
	
		<spring.security.config>3.2.4.RELEASE</spring.security.config>
		<spring.security.core>3.2.4.RELEASE</spring.security.core>
		<spring.security.openid>3.2.4.RELEASE</spring.security.openid>
		<spring.security.web>3.2.4.RELEASE</spring.security.web>

		<paypal-auth-signature>1.0</paypal-auth-signature>
		<RadixTree>0.35</RadixTree>
		<schema-popup>1.6.1</schema-popup>
		<simplecaptcha>1.2.1</simplecaptcha>
		<nz.org.take>1.5.1</nz.org.take>
		<logback.core>1.0.13</logback.core>
		<logback.classic>${logback.core}</logback.classic>
		<slf4j.api>1.7.5</slf4j.api>
		<xml-apis>1.4.01</xml-apis>
		<org.postgresql>9.3-1102-jdbc41</org.postgresql>
		<de.odysseus.juel>2.1.3</de.odysseus.juel>
		<log4j>1.2.17</log4j>
		<xalan>2.7.1</xalan>
		<jalopy>1.5rc3</jalopy>
		

	</properties>

    <dependencies>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwtVersion}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwtVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <classifier>sources</classifier>
            <scope>test</scope>
        </dependency>
		
	<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${org.springframework.beans}</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${org.springframework.core}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-oxm</artifactId>
			<version>${org.springframework.context}</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${org.springframework.tx}</version>
		</dependency>
		
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.0-api</artifactId>
			<version>${org.hibernate.javax.persistence}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
			<version>${org.hibernate.javax.persistence}</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>4.3.8.Final</version>
		</dependency>		

		<dependency>
			<groupId>com.smartgwt</groupId>
			<artifactId>smartgwt</artifactId>
			<version>2.4</version>
		</dependency>		

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.9.1</version>
		</dependency>		

		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.5.0-b01</version>
		</dependency>
		
		<dependency>
			<groupId>net.tanesha.recaptcha4j</groupId>
			<artifactId>recaptcha4j</artifactId>
			<version>0.0.7</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.gwtupload</groupId>
			<artifactId>gwtupload</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>0.3m</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>com.claudiushauptmann</groupId>
			<artifactId>gwt-recaptcha</artifactId>
			<version>1.0.0.Beta2</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.8.1</version>
		</dependency>

		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.2</version>
		</dependency>

		<dependency>
			<groupId>xalan</groupId>
			<artifactId>serializer</artifactId>
			<version>2.7.2</version>
		</dependency>
		
		
		<!-- SPRING 4 DEPENDENCIES 
		
		Home >> Spring Framework >> Spring 4.0 Environment Setup
Spring 4.0 Environment Setup
November 22, 2013 by Krishna Srinivasan Leave a Comment

6
5
9
6
This tutorial explains how to setup your environment for working with the Spring 4.0 examples. Instead of explaining this process in every article, I would write it here so that this tutorial will be linked from the all Spring 4.0 tutorials for the setup reference.

Spring 4.0 Maven Dependency



 
<dependencies>
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>4.0.0.RC1</version>
    </dependency>
</dependencies>
<repositories>
    <repository>
        <id>spring-milestones</id>
        <name>Spring Milestones</name>
        <url>http://repo.spring.io/milestone</url>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </repository>
</repositories>
		
		-->
    </dependencies>

	<repositories>

		<repository>
                <id>mvnrepository</id>
                <url>http://repo1.maven.org/maven2</url>
                <snapshots>
                    <enabled>false</enabled>
                </snapshots>
                <releases>
                    <enabled>true</enabled>
                </releases>
            </repository>	
	</repositories>

    <build>
    
       <defaultGoal>clean compile war tomcat7:run-war-only</defaultGoal> 
    
        <plugins>

		<plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <configuration>
              <tasks>
				<java failonerror="true" fork="true" classname="com.google.gwt.dev.Compiler"> 
			  <classpath>
				<pathelement location="src/main/java"/>

				<pathelement location="war"/>
				
				<pathelement location="src/main/resources"/>

				
    <pathelement location="E:\gwtapp\gwtapplication\libs/gwt-user-2.6.0.jar"/>
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-dev-2.6.0.jar"/>

    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/validation-api-1.0.0.GA.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/validation-api-1.0.0.GA-sources.jar" />

    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-aop-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-beans-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-context-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-context-support-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-core-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-expression-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-jdbc-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-orm-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-oxm-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-tx-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-web-4.0.6.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-webmvc-4.0.6.RELEASE.jar" />

    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/slf4j-log4j12-1.0-rc1.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/recaptcha4j-0.0.8.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/org.moxieapps.gwt.highcharts-1.1.3.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/javax.mail-1.3.3.01.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/slf4j-log4j12-1.0-rc1.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/log4j-1.2.17.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/json-20090211.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/joda-time-2.9.1.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/jbcrypt-0.3m.jar" />

    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-annotations.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-commons-annotations.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-commons-annotations-4.0.5.Final.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-core-4.3.8.Final.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-entitymanager-4.3.8.Final.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-jpa-2.1-api-1.0.0.Final.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/json-20090211.jar" />

    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gxt-3.0.0.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwtupload-1.0.3.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-sl-1.5.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-servlet.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-recaptcha-1.0.0.Beta2.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-material-1.3.3.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/ejb3-persistence.jar" />	
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/org.moxieapps.gwt.highcharts-1.1.3.jar" />

    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/smartgwt-2.4.jar" />
	
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-security-config-3.2.4.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-security-core-3.2.4.RELEASE.jar" />
    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-security-web-3.2.4.RELEASE.jar" />
				
			  </classpath>
			  <!-- add jvmarg -Xss16M or similar if you see a StackOverflowError -->
			  <jvmarg value="-Xmx1G"/>
			<arg line="-logLevel DEBUG"/>
			
			  <!-- Additional arguments like -style DETAILED or -logLevel DEBUG -->
			  <!-- <arg line="-optimize 0"  /> -->
			  <!-- <arg line="-style PRETTY"/> -->
			  <arg value="com.mamallan.gwtapp.HelloWorldGWT"/>
			</java>

              </tasks>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
	  
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
            </plugin>
	
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
       
			<plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <path>${tomcat.context}</path>
                    <port>${tomcat.webport}</port>
                    <ajpPort>${tomcat.ajpport}</ajpPort>
                    <systemProperties>
                        <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>